--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -4,9 +4,16 @@
     <th:block th:insert="fragments/default/default"/>
     <script src="/webjars/jquery-ui/1.13.0/jquery-ui.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/monitoring.css">
+
     <script type="text/javascript" src="/js/map/controlMap.js"></script>
     <script type="text/javascript" src="/js/pages/mntr.js"></script>
     <script type="text/javascript" src="/js/api/kakaoApi.js"></script>
+
+    <!-- datetimepicker -->
+    <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/datepicker.css">
+    <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
+    <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.ko.js"></script>
+
     <th:block th:insert="view/commons/map"/>
 </head>
 <body>
