디밍그룹 CRUD 완료, 디밍 설정 진행중

--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
@@ -62,8 +62,8 @@
                 </dl>
                 <div>
                     <ul>
-                        <li sec:authorize="hasAnyRole('ROLE_config_rw')"><i><img src="/images/default/refresh.svg"></i>기본값으로 되돌리기</li>
-                        <li sec:authorize="hasAnyRole('ROLE_config_rw')"><i><img src="/images/default/apply.svg"></i>적용</li>
+                        <li id="defaultDimmingSetBtn" sec:authorize="hasAnyRole('ROLE_config_rw')"><i><img src="/images/default/refresh.svg"></i>기본값으로 되돌리기</li>
+                        <li id="addDimmingSetBtn" sec:authorize="hasAnyRole('ROLE_config_rw')"><i><img src="/images/default/apply.svg"></i>적용</li>
                     </ul>
                 </div>
             </div>
