연결 테스트

--- a/danusys-drone/src/main/resources/templates/view/pages/drone.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/drone.html
@@ -248,10 +248,10 @@
                                 </select>
                             </dd>
                         </dl>
-                        <ul class="button">
-                            <li class="sync_button">동기화</li>
+<!--                        <ul class="button">-->
+<!--                            <li class="sync_button">동기화</li>-->
 
-                        </ul>
+<!--                        </ul>-->
                     </div>
                 </div>
 
