--- a/danusys-smartMetering/src/main/resources/templates/gis/main.html
+++ b/danusys-smartMetering/src/main/resources/templates/gis/main.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/gisLayout">
+      layout:decorate="~{layout/gisLayout}">
 
 <th:block th:fragment="gisMain">
 
