--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -423,3 +423,6 @@ tr.selected td {background-color: #23252b;}
 
 /* map */
 .map_wrap{position:relative; flex:1; height:100%; background:#0c0c0d;}
+/* map tooltip */
+#mouseOverPopup #mouseOverPopupContent{padding: 7px; background: #1e1f239e; box-shadow: 0px 0px 20px rgb(0 0 0 / 20%); border-radius: 10px;}
+#mouseOverPopup .my-ol-popup-closer{display:none;}
