디밍 그룹 추가/수정 시 시설물 명 검색추가

--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
@@ -188,7 +188,7 @@
                         <dd><input type="text" id="dimmingGroupName" data-required="true" placeholder="디밍 그룹명 이름"></dd>
                     </dl>
                     <p class="legend">시설물 조회
-                        <span><input type="text" placeholder="시설물 검색"></span>
+                        <span><input id="lampRoadKeyword" type="text" placeholder="시설물 이름 검색"></span>
                     </p>
                     <div class="list_table">
                         <table id="lampRoadInGroupTable">
