facility.js 중 디밍기능을 dimming.js 로 분리

--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -49,5 +49,6 @@
     <script type="text/javascript" src="/js/pages/account.js"></script>
     <script type="text/javascript" src="/js/pages/station.js"></script>
     <script type="text/javascript" src="/js/pages/facility.js"></script>
+    <script type="text/javascript" src="/js/pages/dimming.js"></script>
 </th:block>
 </html>
