개소 조회 추가, 데이터 테이블 단일 선택 적용.

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -33,11 +33,11 @@
                         <dt>개소 상태</dt>
                         <dd>
 							<span>
-								<input type="checkbox" id="normal" name="">
+								<input type="checkbox" id="normal" name="status" data-value="normal" data-init-value="checked" checked>
 								<label for="normal"><span></span>정상</label>
 							</span>
                             <span>
-								<input type="checkbox" id="strange" name="">
+								<input type="checkbox" id="strange" name="status" data-value="strange" data-init-value="checked" checked>
 								<label for="strange"><span></span>이상</label>
 							</span>
                         </dd>
@@ -51,7 +51,7 @@
                         </dd>
                     </dl>
                     <ul class="button">
-                        <li class="input"><input type="text" name="keyword" placeholder="검색어를 입력하세요."></li>
+                        <li class="input"><input type="text" name="keyword" placeholder="검색어를 입력하세요." onkeydown="if(event.keyCode==13){stations.create();}"></li>
                         <li id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</li>
                         <li id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</li>
                     </ul>
@@ -65,11 +65,11 @@
                     <dd><span class="count">123</span>건</dd>
                 </dl>
                 <div>
-                    <ul class="status_label">
-                        <li><span class="gray"></span>비활성 : 5</li>
-                        <li><span class="red"></span>이상 : 3</li>
-                        <li><span class="green"></span>정상 : 14</li>
-                    </ul>
+<!--                    <ul class="status_label">-->
+<!--                        <li><span class="gray"></span>비활성 : 5</li>-->
+<!--                        <li><span class="red"></span>이상 : 3</li>-->
+<!--                        <li><span class="green"></span>정상 : 14</li>-->
+<!--                    </ul>-->
                     <ul>
                         <li sec:authorize="hasAnyRole('ROLE_inqry_rw')"><i><img src="/images/default/add.svg"></i>추가</li>
                     </ul>
@@ -82,7 +82,7 @@
                         <th>개소 관리 ID</th>
                         <th>개소 종류</th>
                         <th>개소 이름</th>
-                        <th>개소 상태</th>
+<!--                        <th>개소 상태</th>-->
                         <th>시설물 종류</th>
                         <th>행정구역</th>
                         <th>개소 주소</th>
