--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -146,6 +146,11 @@
 .search_table table tbody tr td span.status.red{background: #bd3535;}
 .search_table table tbody tr td span.status.yellow{background: #d5932a;}
 .search_table table tbody tr td span.status.green{background: #357d33;}
+.search_table table tbody tr td span.type{display: inline-block; vertical-align: middle; width: 30px; height: 30px; background: #434751; border-radius: 100%; cursor: default;}
+.search_table table tbody tr td span.type.bus{background: #344472;}
+.search_table table tbody tr td span.type.pole{background: #d78219;}
+.search_table table tbody tr td span.type i{margin: 5px auto; opacity: 0.8; cursor: default;}
+.search_table table tbody tr td span.type.bus i{width: 16px; height: 16px; margin: 7px 0px;}
 .search_table table tbody tr td span.station_type{display: block; width: 36px; height: 36px; margin: auto;}
 .search_table table tbody tr td span.station_type img{width: 100%; height: 100%;}
 .search_table .table_body{height: 100%; overflow: auto; border-bottom: 2px solid #292c34;}
