--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -17,6 +17,12 @@
             <h6>시설물 검색</h6>
             <form>
                 <div>
+                    <p>개소 종류</p>
+                    <dl class="dropdown_checkbox" data-selectbox-type="stationKind">
+                        <dt class="checkbox_title select_title">개소 종류</dt>
+                        <dd class="checkbox_list list" style="display: none;">
+                        </dd>
+                    </dl>
                     <p>시설물 종류</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="facilityKind">
                         <dt class="checkbox_title select_title">시설물 종류</dt>
@@ -27,23 +33,17 @@
                         <dt>시설물 상태</dt>
                         <dd>
 							<span>
-								<input type="checkbox" id="normal" name="" data-init-value="checked" checked>
+								<input type="checkbox" id="normal" name="status" data-value="normal" data-init-value="checked" checked>
 								<label for="normal"><span></span>정상</label>
 							</span>
                             <span>
-								<input type="checkbox" id="strange" name="" data-init-value="checked" checked>
+								<input type="checkbox" id="strange" name="status" data-value="strange" data-init-value="checked" checked>
 								<label for="strange"><span></span>이상</label>
 							</span>
                         </dd>
                     </dl>
                 </div>
                 <div>
-                    <p>개소 종류</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="stationKind">
-                        <dt class="checkbox_title select_title">개소 종류</dt>
-                        <dd class="checkbox_list list" style="display: none;">
-                        </dd>
-                    </dl>
                     <p>행정구역</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="administZone">
                         <dt class="checkbox_title select_title">행정구역</dt>
