--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -29,19 +29,19 @@
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
-                    <dl class="checkbox_set">
-                        <dt>개소 상태</dt>
-                        <dd>
-							<span>
-								<input type="checkbox" id="normal" name="status" data-value="normal" data-init-value="checked" checked>
-								<label for="normal"><span></span>정상</label>
-							</span>
-                            <span>
-								<input type="checkbox" id="strange" name="status" data-value="strange" data-init-value="checked" checked>
-								<label for="strange"><span></span>이상</label>
-							</span>
-                        </dd>
-                    </dl>
+<!--                    <dl class="checkbox_set">-->
+<!--                        <dt>개소 상태</dt>-->
+<!--                        <dd>-->
+<!--							<span>-->
+<!--								<input type="checkbox" id="normal" name="status" data-value="normal" data-init-value="checked" checked>-->
+<!--								<label for="normal"><span></span>정상</label>-->
+<!--							</span>-->
+<!--                            <span>-->
+<!--								<input type="checkbox" id="strange" name="status" data-value="strange" data-init-value="checked" checked>-->
+<!--								<label for="strange"><span></span>이상</label>-->
+<!--							</span>-->
+<!--                        </dd>-->
+<!--                    </dl>-->
                 </div>
                 <div>
                     <p>행정구역</p>
