datepicker 전체 적용

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -48,9 +48,9 @@
                 <div>
                     <dl class="date_set">
                         <dt>발생 기간</dt>
-                        <dd><input type="text" id="startDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
+                        <dd><input type="text" id="startDt" placeholder="날짜를 입력하세요" name="startDt" class="input_date"></dd>
                         <span>부터</span>
-                        <dd><input type="text" id="endDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
+                        <dd><input type="text" id="endDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
                         <span>까지</span>
                     </dl>
                     <ul class="button">
